2487. Remove Nodes From Linked List

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,3 +4,5 @@ project(code C)
 set(CMAKE_C_STANDARD 11)
 
 add_executable("DifferentWaysToAddParentheses" "241. Different ways to add parantheses/main.c")
+
+add_executable("RemoveNodesFromLinkedList" "2487. Remove Nodes From Linked List/main.c")
