24. Swap Nodes in Pairs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,3 +12,5 @@ add_executable("MergeTwoSortedLists" "21. Merge Two Sorted Lists/main.c")
 add_executable("PalindromeLinkedList" "234. Palindrome Linked List/main.c")
 
 add_executable("ReorderList" "143. Reorder List/main.c")
+
+add_executable("SwapNodesInPairs" "24. Swap Nodes in Pairs/main.c")
